# sgr-coin-calculator-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  app.py  clear_down_db_script.py  config.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  run.py
docs/: Insomnia_2025-09-19.yaml  creation-notes.md  database-seed.md  install-and-run.md  notes.md  testing.md
migrations/: alembic.ini  env.py
migrations/versions/: 0361099e2e24_initial_migration.py  147176c0b1fd_test.py  2c92de7972ac_add_default_rank.py  312c19dc9eae_change_to_date_not_datetime.py  316f3ec49eb8_reverse_change.py  36b4f546611a_add_column.py  3b25a412794f_initial_migration.py  42421ae01481_add_member_job_association_object.py  44f708ed7943_make_member_pay_nullable.py  4d8636517283_add_member_status.py  5fc793150ffb_revert_test.py  60d7659cc178_test_update.py  6e9ce9ed0060_initial_migration.py  6ec63e5ef8f6_setup_members.py  723e9913d806_make_pay_fields_decimals.py  72bc08dc5493_initial_migration.py  7a11bff0327c_adjust_relationships.py  906b6b55b299_remove_dup_rank_store_on_member_and_.py  982adf800c24_initial_migration.py  bcfa947b995e_review_title_field.py  bf0c7f86510b_add_job_model.py  c90761bca114_remove_rank_to_member_relationship.py  cad7dedb021d_add_default_rank.py  d9dc6b9c6df8_initial_migration.py  dd817b2f68c3_initial_migration.py  dfbd6fa6e884_remove_column.py  f6ca44a016d0_make_pay_fields_integers.py
models/: __init__.py  rank.py
src/: __init__.py  constants.py  extensions.py
src/api/: models.py  routes.py  schemas.py
src/api/v1/: job_routes.py  member_routes.py  rank_routes.py  routes.py
tests/: conftest.py  test_db_uri.py  test_healthcheck.py  test_helpers.py  utils.py
tests/routes/v1/: member_rank_routes.py  test_class_wholenumber.py  test_job_errors.py  test_job_routes.py  test_job_update_errors.py  test_job_updates.py  test_job_updates_payment_resets.py  test_member_errors.py  test_member_routes.py  test_payment_errors.py  test_payment_methods.py  test_payment_routes.py  test_rank_errors.py  test_rank_routes.py
