[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sgr-coin-calculator-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools]
package-dir = {"" = "src"}  # use src/ layout

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"api" = ["py.typed"]
