[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgr-coin-calculator-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.16.5",
    "apispec==6.8.2",
    "blinker==1.9.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "coverage==7.10.6",
    "flask==3.1.2",
    "flask-migrate==4.1.0",
    "flask-smorest==0.46.1",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.2.4",
    "gunicorn>=23.0.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "load-dotenv==0.1.0",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "marshmallow==4.0.1",
    "marshmallow-sqlalchemy==1.4.2",
    "packaging==25.0",
    "pip==25.2",
    "pluggy==1.6.0",
    "psycopg2-binary==2.9.10",
    "pygments==2.19.2",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-flask==1.3.0",
    "python-dotenv==1.1.1",
    "sqlalchemy==2.0.43",
    "sqlalchemy-utils==0.42.0",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "webargs==8.7.0",
    "werkzeug==3.1.3",
]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools]
package-dir = {"" = "src"}  # use src/ layout

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"api" = ["py.typed"]
